Fix modernizer: replace Collections.empty* with List/Map/Set.of()
Agent-Logs-Url: https://github.com/hazendaz/displaytag/sessions/3448739b-505c-4fc9-8581-dd3e5687fb90

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>